2008-06-10  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/bus/au1500.c, src/bus/avr32.c, src/bus/bcm1250.c,
     src/bus/bf533_ezkit.c, src/bus/bf533_stamp.c, src/bus/bf537_stamp.c,
     src/bus/bf548_ezkit.c, src/bus/bf561_ezkit.c, src/bus/ejtag.c,
     src/bus/fjmem.c, src/bus/generic_bus.c, src/bus/generic_bus.h,
     src/bus/h7202.c, src/bus/ixp425.c, src/bus/jopcyc.c,
     src/bus/lh7a400.c, src/bus/mpc5200.c, src/bus/mpc824x.c,
     src/bus/ppc405ep.c, src/bus/ppc440gx_ebc8.c, src/bus/prototype.c,
     src/bus/pxa2x0.c, src/bus/s3c4510x.c, src/bus/sa1110.c,
     src/bus/sh7727.c, src/bus/sh7750r.c, src/bus/sh7751r.c,
     src/bus/sharc21065l.c, src/bus/slsup3.c, src/bus/tx4925.c,
     src/bus/zefant-xs3.c:
     [ 1984813 ] Bus driver cleanup, second step of part 4) (Hartley Sweeten)
     generic_bus_read() added

2008-06-09  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/bus/bf548_ezkit.c, src/bus/fjmem.c, src/bus/ppc405ep.c,
     src/bus/sh7727.c, src/bus/prototype.c, src/bus/sa1110.c,
     src/bus/ppc440gx_ebc8.c, src/bus/tx4925.c, src/bus/sh7750r.c,
     src/bus/pxa2x0.c, src/bus/bf533_stamp.c, src/bus/bf533_ezkit.c,
     src/bus/bf537_stamp.c, src/bus/ixp425.c, src/bus/avr32.c,
     src/bus/h7202.c, src/bus/zefant-xs3.c, src/bus/mpc824x.c,
     src/bus/bcm1250.c, src/bus/sharc21065l.c, src/bus/au1500.c,
     src/bus/lh7a400.c, src/bus/sh7751r.c, src/bus/mpc5200.c,
     src/bus/jopcyc.c, src/bus/bf561_ezkit.c, src/bus/slsup3.c,
     src/bus/s3c4510x.c, src/bus/ejtag.c:
     [ 1984813 ] Bus driver cleanup, first step of part 4) (Hartley Sweeten)

   * src/svf/svf_flex.l, src/flash/flash.c (flashmem):
     avoid '\r' in i18n strings (Hartley Sweeten)
   * po/fr.po, po/rw.po, po/sk.po: remove '\r'

2008-06-06  Kolja Waschk <kawk>

   * src/bus/bcm1250.c: Allow for 8 IO_CS_L signals, not just 7
      (Hartley Sweeten)

   * src/bus/bf548_ezkit.c, src/bus/fjmem.c, src/bus/ppc405ep.c,