@@ -1,5 +1,9 @@
 2008-06-10  Arnim Laeuger  <arniml@users.sourceforge.net>
 
+   * src/bus/generic_bus.c, src/bus/generic_bus.h, src/bus/zefant-xs3.c:
+     [ 1984813 ] Bus driver cleanup, first step of part 2) (Hartley Sweeten)
+     generic_bus_attach_sig() added
+
    * src/bus/au1500.c, src/bus/avr32.c, src/bus/bcm1250.c,
      src/bus/bf533_ezkit.c, src/bus/bf533_stamp.c, src/bus/bf537_stamp.c,
      src/bus/bf548_ezkit.c, src/bus/bf561_ezkit.c, src/bus/ejtag.c,
